Bug 437364: add Link to preference page from approval dialog
Change-Id: Ie8db98b7c657e8a08b8753a107ca97bf7d45b61b
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/privacy/rcp/l10n/messages.properties
@@ -16,3 +16,5 @@ BUTTON_ENABLE_ALL=Enable All
 BUTTON_DISABLE_ALL=Disable All
 
 TOOLTIP_INTERESTED_PARTY=Purpose: {0}\n\nPolicy: <a href="{1}">{1}</a>
+
+PREF_LINK_MESSAGE=These preferences can always be changed later in <a href="{0}">\u2018{0}\u2019</a>.
