Bug 437992: Part 2 - Extend the example plugin to log the User ID every 10 minute
Change-Id: I9a4939940748306170c754437bcaf28c783b5f9c
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/OSGI-INF/l10n/bundle.properties
@@ -8,3 +8,5 @@ principals.example.description=The Example Project\u2019s mission is to illustra
  To this effect, it would like to send some private information across the network.
 permissions.javaVersion.purpose=For illustration purposes, the Example Project would like to collect information about the Java version you use. \
  This information is not used for any other purpose nor is it shared with third parties.
+permissions.userId.purpose=For illustration purposes, the Example Project would like to collect your user ID. \
+ This information is not used for any other purpose nor is it shared with third parties.
