--- a/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
@@ -7,6 +7,7 @@ extension-point.datums.name=Private Datums
 extension-point.permissions.name=Desired Permissions
 extension-point.principals.name=Principals
 preferencePages.privacy.name=Privacy
+preferencePages.userId.name=User ID
 datums.javaVersion.name=Java version
 datums.javaVersion.description=The Java version as given by the java.version or java.specification.version system properties.
 datums.inet4Address.name=IPv4 address
@@ -16,3 +17,6 @@ datums.inet6Address.name=IPv6 address
 datums.inet6ddress.description=An IPv6 address assigned to this host. \
  An IPv6 address may disclose (approximate) information about your location. \
  It may furthermore disclose information identifying your network interface\u2019s make and manufacturer.
+datums.userId.name=User ID
+datums.userId.description=A random generated user ID assigned to your login. \
+ A new user ID can be generated upon your request at any time.
