--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/privacy/rcp/l10n/messages.properties
@@ -1,8 +1,14 @@
 JOB_APPROVAL_DIALOG=Showing Approval Dialog
 
-PREFPAGE_TITLE=Privacy
-PREFPAGE_DESCRIPTION=Some installed plug\u2010ins would like to send selected private information to interested parties. \
+PRIVACY_PREFPAGE_TITLE=Privacy
+PRIVACY_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins would like to send selected private information to interested parties. \
  You can configure which information may be sent below.
+
+USERID_PREFPAGE_TITLE=User ID
+USERID_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins may send your User ID to interested parties. \
+ The User ID is a random generated identifier \
+ You can generate a new one by clicking the button below. Your User ID will only be sent to interested parties if you \
+ approve this on <a href="{0}">\u2018{0}\u2019</a>.
 
 APPROVAL_DIALOG_TITLE=New Plug\u2010ins Detected
 APPROVAL_DIALOG_MESSAGE=You have installed new plug\u2010ins that would like to send selected private information to interested parties. \
