Bug 438537: Internationalize all messages
Also removes some predefined datums which are of limited general appeal.

Change-Id: Ia0d780e2d19d490cfdb0690e779978b476c7693f
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/privacy/rcp/l10n/messages.properties
@@ -2,11 +2,11 @@ JOB_APPROVAL_DIALOG=Showing Approval Dialog
 
 PREFPAGE_TITLE=Privacy
 PREFPAGE_DESCRIPTION=Some installed plug\u2010ins would like to send selected private information to interested parties. \
- You can configure which information is sent below.
+ You can configure which information may be sent below.
 
 APPROVAL_DIALOG_TITLE=New Plug\u2010ins Detected
 APPROVAL_DIALOG_MESSAGE=You have installed new plug\u2010ins that would like to send selected private information to interested parties. \
- You can configure which information is sent below.
+ You can configure which information may be sent below.
 
 LABEL_GROUP_BY=Group by
 LABEL_INFORMATION=information
