Bug 439185: User ID not generated when ".eclipse" directory absent
Change-Id: Iddc443adddeb44e0bb36156adc8f8223fa503064
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
@@ -18,5 +18,5 @@ datums.inet6ddress.description=An IPv6 address assigned to this host. \
  An IPv6 address may disclose (approximate) information about your location. \
  It may furthermore disclose information identifying your network interface\u2019s make and manufacturer.
 datums.userId.name=User ID
-datums.userId.description=A random generated user ID assigned to your login. \
+datums.userId.description=A randomly generated identifier assigned to your login. \
  A new user ID can be generated upon your request at any time.
