--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/privacy/rcp/l10n/messages.properties
@@ -1,17 +1,17 @@
 JOB_APPROVAL_DIALOG=Showing Approval Dialog
 
 PRIVACY_PREFPAGE_TITLE=Privacy
-PRIVACY_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins would like to send selected private information to interested parties. \
+PRIVACY_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins want to send selected private information to interested parties. \
  You can configure which information may be sent below.
 
 USERID_PREFPAGE_TITLE=User ID
-USERID_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins may send your User ID to interested parties. \
- The User ID is a random generated identifier \
- You can generate a new one by clicking the button below. Your User ID will only be sent to interested parties if you \
- approve this on <a href="{0}">\u2018{0}\u2019</a>.
+USERID_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins may want to send your User ID to interested parties. \
+ The User ID is a randomly generated identifier assigned to your login. \
+ You can generate a new one any time. \
+ Your User ID will only be sent to interested parties if explicitly approved on <a href="{0}">\u2018{0}\u2019</a>.
 
 APPROVAL_DIALOG_TITLE=New Plug\u2010ins Detected
-APPROVAL_DIALOG_MESSAGE=You have installed new plug\u2010ins that would like to send selected private information to interested parties. \
+APPROVAL_DIALOG_MESSAGE=You have installed new plug\u2010ins that want to send selected private information to interested parties. \
  You can configure which information may be sent below.
 
 LABEL_GROUP_BY=Group by
@@ -20,6 +20,7 @@ LABEL_INTERESTED_PARTY=interested party:
 
 BUTTON_ENABLE_ALL=Enable All
 BUTTON_DISABLE_ALL=Disable All
+BUTTON_GENERATE=Generate
 
 TOOLTIP_INTERESTED_PARTY=Purpose: {0}\n\nPolicy: <a href="{1}">{1}</a>
 
