[ui] Show Permission Approval wizard on first activation.
Change-Id: I17295a422366d6e099e2f5619dbcbb85875b90b5
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
@@ -8,11 +8,27 @@ USERID_PREFPAGE_TITLE=User ID
 USERID_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins may want to send your User ID to interested parties. \
  The User ID is a randomly generated identifier assigned to your login. \
  You can generate a new one any time. \
- Your User ID will only be sent to interested parties if explicitly approved on <a href="{0}">\u2018{0}\u2019</a>.
+ Your User ID will only be sent to interested parties if explicitly approved in <a href="{0}">\u2018{0}\u2019</a>.
 
 APPROVAL_DIALOG_TITLE=New Plug\u2010ins Detected
 APPROVAL_DIALOG_MESSAGE=You have installed new plug\u2010ins that want to send selected private information to interested parties. \
  You can configure which information may be sent below.
+
+APPROVAL_WIZARD_TITLE=Configure Your Privacy Settings
+
+WIZARD_INTRO_PAGE_TITLE=Welcome to the Privacy framework
+WIZARD_INTRO_PAGE_DESCRIPTION=About the Privacy framework
+WIZARD_INTRO_PAGE_CONTENT=Welcome to the Privacy framework. \
+ It helps you manage plug\u2010ins that want to share private information with interested parties. \
+ Whenever you install such a plug\u2010in, a dialog will appear asking for your approval.
+
+WIZARD_INTRO_PAGE_PREFS_LINK_DESCRIPTION=You can configure which information you want to share on the next page or in <a href="{0}">\u2018{0}\u2019</a>.
+
+WIZARD_INTRO_PAGE_WEBSITE_LINK_DESCRIPTION=For more information about the Privacy framework, please visit our <a href="{0}">website</a>.
+WIZARD_INTRO_PAGE_LINK_URI=http://www.eclipse.org/recommenders/
+
+WIZARD_PERMISSION_PAGE_TITLE=Configure Sharing
+WIZARD_PERMISSION_PAGE_DESCRIPTION=Configure what information you want to share
 
 LABEL_GROUP_BY=Group by
 LABEL_INFORMATION=information
@@ -22,6 +38,8 @@ LABEL_USER_ID=User ID:
 BUTTON_ENABLE_ALL=Enable All
 BUTTON_DISABLE_ALL=Disable All
 BUTTON_GENERATE=Generate
+BUTTON_OK=OK
+BUTTON_NOT_NOW=Not Now
 
 TOOLTIP_INTERESTED_PARTY=Purpose: {0}\n\nPolicy: <a href="{1}">{1}</a>
 
