[ui] User id Preference page: layout improved
Change-Id: Id745ecb8a67170206bbbdec165a50a7b3806609f
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
@@ -17,6 +17,7 @@ APPROVAL_DIALOG_MESSAGE=You have installed new plug\u2010ins that want to send s
 LABEL_GROUP_BY=Group by
 LABEL_INFORMATION=information
 LABEL_INTERESTED_PARTY=interested party:
+LABEL_USER_ID=User ID:
 
 BUTTON_ENABLE_ALL=Enable All
 BUTTON_DISABLE_ALL=Disable All
