[services] Send Heartbeat containing the bundle version once activated/approved
Change-Id: Icbac1c19a0b56b5e6ebd602aade84b8825fde1a1
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/OSGI-INF/l10n/bundle.properties
@@ -6,7 +6,5 @@ Bundle-Vendor=Eclipse Code Recommenders
 principals.example.name=Example Project
 principals.example.description=The Example Project\u2019s mission is to illustrate how to best use the Eclipse Code Recommenders Privacy Preferences framework. \
  To this effect, it would like to send some private information across the network.
-permissions.javaVersion.purpose=For illustration purposes, the Example Project would like to collect information about the Java version you use. \
- This information is not used for any other purpose nor is it shared with third parties.
-permissions.userId.purpose=For illustration purposes, the Example Project would like to collect your user ID. \
+permissions.heartbeat.purpose=For illustration purposes, the Example Project would like to send an hourly heartbeat to a remote server hosted by the Eclipse Foundation.
  This information is not used for any other purpose nor is it shared with third parties.
