[preferences] Bug 437169: Allow privacy preferences to be exported
Change-Id: I457f43059b8a60938a4d0810ca7f1cf336680dda
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>
Signed-off-by: Johannes Dorn <johannes.dorn@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
@@ -8,6 +8,8 @@ extension-point.permissions.name=Desired Permissions
 extension-point.principals.name=Principals
 preferencePages.privacy.name=Privacy
 preferencePages.userId.name=User ID
+preferenceTransfer.permissions.name=Privacy Preferences
+preferenceTransfer.permissions.description=Permissions to send private data to interested parties as managed by the \u2018General > Privacy\u2019 preference page.
 datums.javaVersion.name=Java version
 datums.javaVersion.description=The Java version as given by the java.version or java.specification.version system properties.
 datums.inet4Address.name=IPv4 address
