[preferences] Bug 441772: Support a Whitelist mechanism for permissions
Change-Id: Id4e1f3d53755dd9f2bbc17e40876db5d83c60b25
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/OSGI-INF/l10n/bundle.properties
@@ -6,5 +6,6 @@ Bundle-Vendor=Eclipse Code Recommenders
 principals.example.name=Example Project
 principals.example.description=The Example Project\u2019s mission is to illustrate how to best use the Eclipse Code Recommenders Privacy Preferences framework. \
  To this effect, it would like to send some private information across the network.
-permissions.heartbeat.purpose=For illustration purposes, the Example Project would like to send an hourly heartbeat to a remote server hosted by the Eclipse Foundation.
+permissions.heartbeat.purpose=For illustration purposes, the Example Project would like to send a heartbeat to a remote server hosted by the Eclipse Foundation.
+ The sent Interval can be configured by users (once, hourly or daily).\
  This information is not used for any other purpose nor is it shared with third parties.
