--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/src/org/eclipse/recommenders/internal/privacy/example/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/src/org/eclipse/recommenders/internal/privacy/example/rcp/l10n/messages.properties
@@ -1,1 +1,2 @@
-JOB_SENDING_HEARTBEAT=Sending Heartbeat to Server
+JOB_SENDING_HEARTBEAT=Sending heartbeat to Server
+ADVANCED_DIALOG_DESCRIPTION=Select heartbeat sending interval:
