--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
@@ -37,6 +37,7 @@ LABEL_ANONYMOUS_ID=Anonymous ID:
 
 BUTTON_ENABLE_ALL=Enable All
 BUTTON_DISABLE_ALL=Disable All
+BUTTON_ADVANCED=Advanced...
 BUTTON_GENERATE=Generate
 BUTTON_OK=OK
 BUTTON_NOT_NOW=Not Now
