[services] Bug 439495: Thread-safe access to anonymous ID file.
Change-Id: I135c13ea2d097189f8c66abeaecaf7092ad5a294
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
@@ -21,4 +21,4 @@ datums.inet6ddress.description=An IPv6 address assigned to this host. \
  It may furthermore disclose information identifying your network interface\u2019s make and manufacturer.
 datums.anonymousId.name=Anonymous ID
 datums.anonymousId.description=A randomly generated identifier assigned to your login. \
- A new anonymous ID can be generated upon your request at any time.
+ A new ID can be generated upon your request at any time.
