--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
@@ -1,17 +1,17 @@
 JOB_APPROVAL_DIALOG=Showing Approval Dialog
 
 PRIVACY_PREFPAGE_TITLE=Privacy
-PRIVACY_PREFPAGE_DESCRIPTION=Some installed plug-ins want to send selected information to interested parties. \
+PRIVACY_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins want to send selected information to interested parties. \
  You can configure which information may be sent below.
 
 ANONYMOUS_ID_PREFPAGE_TITLE=Anonymous ID
-ANONYMOUS_ID_PREFPAGE_DESCRIPTION=Some installed plug-ins may need your anonymous ID for further analysis. \
+ANONYMOUS_ID_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins may need your anonymous ID for further analysis. \
  The anonymous ID is a randomly generated identifier assigned to your login. \
  You can generate a new one any time. \
- Your anonymous ID will only be sent to interested parties if explicitly approved in <a href="{0}">\u2018{0}\u2019</a>.
+ The ID will only be sent to interested parties if explicitly approved in <a href="{0}">\u2018{0}\u2019</a>.
 
-APPROVAL_DIALOG_TITLE=New Plug-ins Detected
-APPROVAL_DIALOG_MESSAGE=You have installed new plug-ins that want to send selected information to interested parties. \
+APPROVAL_DIALOG_TITLE=New Plug\u2010ins Detected
+APPROVAL_DIALOG_MESSAGE=You have installed new plug\u2010ins that want to send selected information to interested parties. \
  You can configure which information may be sent below.
 
 APPROVAL_WIZARD_TITLE=Configure Your Privacy Settings
@@ -19,8 +19,11 @@ APPROVAL_WIZARD_TITLE=Configure Your Privacy Settings
 WIZARD_INTRO_PAGE_TITLE=Welcome to the Eclipse Privacy framework
 WIZARD_INTRO_PAGE_DESCRIPTION=About the Eclipse Privacy framework
 WIZARD_INTRO_PAGE_CONTENT=Welcome to the Eclipse Privacy framework. \
- It helps you manage plug-ins that want to share selected information with their communities. \
- Whenever you install such a plug-in, a dialog will appear asking for your approval.
+ It helps you manage plug\u2010ins that want to share selected information with their communities. \
+ Whenever you install such a plug\u2010in, a dialog will appear asking for your approval.
+
+LOG_ERROR_ANONYMOUS_ID_FILE_READ=Failed to read anonymous ID from file {0}
+LOG_ERROR_ANONYMOUS_ID_FILE_WRITE=Failed to write anonymous ID to file {0}
 
 WIZARD_INTRO_PAGE_PREFS_LINK_DESCRIPTION=You can configure which information you want to share on the next page or in <a href="{0}">\u2018{0}\u2019</a>.
 
