--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
@@ -1,30 +1,30 @@
 JOB_APPROVAL_DIALOG=Showing Approval Dialog
 
 PRIVACY_PREFPAGE_TITLE=Privacy
-PRIVACY_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins want to send selected private information to interested parties. \
+PRIVACY_PREFPAGE_DESCRIPTION=Some installed plug-ins want to send selected information to interested parties. \
  You can configure which information may be sent below.
 
 USERID_PREFPAGE_TITLE=User ID
-USERID_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins may want to send your User ID to interested parties. \
- The User ID is a randomly generated identifier assigned to your login. \
+USERID_PREFPAGE_DESCRIPTION=Some installed plug-ins may need your anonymous ID for further analysis. \
+ The anonymous ID is a randomly generated identifier assigned to your login. \
  You can generate a new one any time. \
- Your User ID will only be sent to interested parties if explicitly approved in <a href="{0}">\u2018{0}\u2019</a>.
+ Your anonymous ID will only be sent to interested parties if explicitly approved in <a href="{0}">\u2018{0}\u2019</a>.
 
-APPROVAL_DIALOG_TITLE=New Plug\u2010ins Detected
-APPROVAL_DIALOG_MESSAGE=You have installed new plug\u2010ins that want to send selected private information to interested parties. \
+APPROVAL_DIALOG_TITLE=New Plug-ins Detected
+APPROVAL_DIALOG_MESSAGE=You have installed new plug-ins that want to send selected information to interested parties. \
  You can configure which information may be sent below.
 
 APPROVAL_WIZARD_TITLE=Configure Your Privacy Settings
 
-WIZARD_INTRO_PAGE_TITLE=Welcome to the Privacy framework
-WIZARD_INTRO_PAGE_DESCRIPTION=About the Privacy framework
-WIZARD_INTRO_PAGE_CONTENT=Welcome to the Privacy framework. \
- It helps you manage plug\u2010ins that want to share private information with interested parties. \
- Whenever you install such a plug\u2010in, a dialog will appear asking for your approval.
+WIZARD_INTRO_PAGE_TITLE=Welcome to the Eclipse Privacy framework
+WIZARD_INTRO_PAGE_DESCRIPTION=About the Eclipse Privacy framework
+WIZARD_INTRO_PAGE_CONTENT=Welcome to the Eclipse Privacy framework. \
+ It helps you manage plug-ins that want to share selected information with their communities. \
+ Whenever you install such a plug-in, a dialog will appear asking for your approval.
 
 WIZARD_INTRO_PAGE_PREFS_LINK_DESCRIPTION=You can configure which information you want to share on the next page or in <a href="{0}">\u2018{0}\u2019</a>.
 
-WIZARD_INTRO_PAGE_WEBSITE_LINK_DESCRIPTION=For more information about the Privacy framework, please visit our <a href="{0}">website</a>.
+WIZARD_INTRO_PAGE_WEBSITE_LINK_DESCRIPTION=For more information about the Privacy framework, please visit project's <a href="{0}">website</a>.
 WIZARD_INTRO_PAGE_LINK_URI=http://www.eclipse.org/recommenders/
 
 WIZARD_PERMISSION_PAGE_TITLE=Configure Sharing
@@ -33,7 +33,7 @@ WIZARD_PERMISSION_PAGE_DESCRIPTION=Configure what information you want to share
 LABEL_GROUP_BY=Group by
 LABEL_INFORMATION=information
 LABEL_INTERESTED_PARTY=interested party:
-LABEL_USER_ID=User ID:
+LABEL_USER_ID=Anonymous ID:
 
 BUTTON_ENABLE_ALL=Enable All
 BUTTON_DISABLE_ALL=Disable All
