[ui] Icons for private datums added.
* Added missing icons
* User id renamed to anonymous id.

Change-Id: I471f9e58f86b4c30d9423f1e91be309a8aaac2fe
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
@@ -7,7 +7,7 @@ extension-point.datums.name=Private Datums
 extension-point.permissions.name=Desired Permissions
 extension-point.principals.name=Principals
 preferencePages.privacy.name=Privacy
-preferencePages.userId.name=User ID
+preferencePages.anonymousId.name=Anonymous ID
 preferenceTransfer.permissions.name=Privacy Preferences
 preferenceTransfer.permissions.description=Permissions to send private data to interested parties as managed by the \u2018General > Privacy\u2019 preference page.
 datums.javaVersion.name=Java version
@@ -19,6 +19,6 @@ datums.inet6Address.name=IPv6 address
 datums.inet6ddress.description=An IPv6 address assigned to this host. \
  An IPv6 address may disclose (approximate) information about your location. \
  It may furthermore disclose information identifying your network interface\u2019s make and manufacturer.
-datums.userId.name=User ID
-datums.userId.description=A randomly generated identifier assigned to your login. \
- A new user ID can be generated upon your request at any time.
+datums.anonymousId.name=Anonymous ID
+datums.anonymousId.description=A randomly generated identifier assigned to your login. \
+ A new anonymous ID can be generated upon your request at any time.
