--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
@@ -4,8 +4,8 @@ PRIVACY_PREFPAGE_TITLE=Privacy
 PRIVACY_PREFPAGE_DESCRIPTION=Some installed plug-ins want to send selected information to interested parties. \
  You can configure which information may be sent below.
 
-USERID_PREFPAGE_TITLE=User ID
-USERID_PREFPAGE_DESCRIPTION=Some installed plug-ins may need your anonymous ID for further analysis. \
+ANONYMOUS_ID_PREFPAGE_TITLE=Anonymous ID
+ANONYMOUS_ID_PREFPAGE_DESCRIPTION=Some installed plug-ins may need your anonymous ID for further analysis. \
  The anonymous ID is a randomly generated identifier assigned to your login. \
  You can generate a new one any time. \
  Your anonymous ID will only be sent to interested parties if explicitly approved in <a href="{0}">\u2018{0}\u2019</a>.
@@ -24,7 +24,7 @@ WIZARD_INTRO_PAGE_CONTENT=Welcome to the Eclipse Privacy framework. \
 
 WIZARD_INTRO_PAGE_PREFS_LINK_DESCRIPTION=You can configure which information you want to share on the next page or in <a href="{0}">\u2018{0}\u2019</a>.
 
-WIZARD_INTRO_PAGE_WEBSITE_LINK_DESCRIPTION=For more information about the Privacy framework, please visit project's <a href="{0}">website</a>.
+WIZARD_INTRO_PAGE_WEBSITE_LINK_DESCRIPTION=For more information about the Privacy framework, please visit the project\u2019s <a href="{0}">website</a>.
 WIZARD_INTRO_PAGE_LINK_URI=http://www.eclipse.org/recommenders/
 
 WIZARD_PERMISSION_PAGE_TITLE=Configure Sharing
@@ -33,7 +33,7 @@ WIZARD_PERMISSION_PAGE_DESCRIPTION=Configure what information you want to share
 LABEL_GROUP_BY=Group by
 LABEL_INFORMATION=information
 LABEL_INTERESTED_PARTY=interested party:
-LABEL_USER_ID=Anonymous ID:
+LABEL_ANONYMOUS_ID=Anonymous ID:
 
 BUTTON_ENABLE_ALL=Enable All
 BUTTON_DISABLE_ALL=Disable All
