[ui] Bug 440721: Display list of interested parties in the user id preference page.
Change-Id: I89ba088f5f026a94f5e08918f03b62f14dae1e75
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
@@ -5,10 +5,10 @@ PRIVACY_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins want to send selected 
  You can configure which information may be sent below.
 
 ANONYMOUS_ID_PREFPAGE_TITLE=Anonymous ID
-ANONYMOUS_ID_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins may need your anonymous ID for further analysis. \
- The anonymous ID is a randomly generated identifier assigned to your login. \
+ANONYMOUS_ID_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins may want to send an anonymous ID to interested parties. \
+ This ID is a randomly generated identifier assigned to your login. \
  You can generate a new one any time. \
- The ID will only be sent to interested parties if explicitly approved in <a href="{0}">\u2018{0}\u2019</a>.
+ The ID will only be sent if explicitly approved in <a href="{0}">\u2018{0}\u2019</a>.
 
 APPROVAL_DIALOG_TITLE=New Plug\u2010ins Detected
 APPROVAL_DIALOG_MESSAGE=You have installed new plug\u2010ins that want to send selected information to interested parties. \
@@ -36,6 +36,7 @@ WIZARD_PERMISSION_PAGE_DESCRIPTION=Configure what information you want to share
 LABEL_GROUP_BY=Group by
 LABEL_INFORMATION=information
 LABEL_INTERESTED_PARTY=interested party:
+LABEL_APPROVED_INTERESTED_PARTIES=Approved interested parties:
 LABEL_ANONYMOUS_ID=Anonymous ID:
 
 BUTTON_ENABLE_ALL=Enable All
