[services] Turn all services into singletons. * Extend the example plugin to send the anonymous ID.
Change-Id: Idafbfbc8568f2d3b441be71d5f308c0f8df75781
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/OSGI-INF/l10n/bundle.properties
@@ -9,3 +9,7 @@ principals.example.description=The Example Project\u2019s mission is to illustra
 permissions.heartbeat.purpose=For illustration purposes, the Example Project would like to send a heartbeat to a remote server hosted by the Eclipse Foundation.
  The sent Interval can be configured by users (once, hourly or daily).\
  This information is not used for any other purpose nor is it shared with third parties.
+permissions.anonymousId.purpose=For illustration purposes, the Example Project would like to use an anonymous identifier assigned to your login. \
+ The ID will be sent to a remote server hosted by the Eclipse Foundation. \
+ A new identifier can be generated upon your request at any time. \
+ This information is not used for any other purpose nor is it shared with third parties.
