--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/src/org/eclipse/recommenders/internal/privacy/example/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/src/org/eclipse/recommenders/internal/privacy/example/rcp/l10n/messages.properties
@@ -1,2 +1,6 @@
 JOB_SENDING_HEARTBEAT=Sending heartbeat to Server
 ADVANCED_DIALOG_DESCRIPTION=Select heartbeat sending interval:
+
+LOG_INFO_SENDING_PERMISSION_APPROVED=Sending {0} approved by the user.
+LOG_INFO_SENDING_PERMISSION_DISAPPROVED=Sending {0} disapproved by the user.
+LOG_INFO_SENDING_PERMISSION_UNKNOWN=Sending {0} not yet approved or disapproved by the user.
