[ui] UI enhancements and activation Bug fix
- Fix permission list placement in the anonymous ID preference page
- Rename advanced button to configure
- Flush activation preference
- Improved heartbeat intervals description
- Use latest parent POM
- Fix a bug where heartbeat sends Bundle-Name, not -SymbolicName

Change-Id: I1320521669f52a6a90c51687416d1fd871892c97
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/src/org/eclipse/recommenders/internal/privacy/example/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/src/org/eclipse/recommenders/internal/privacy/example/rcp/l10n/messages.properties
@@ -1,6 +1,10 @@
 JOB_SENDING_HEARTBEAT=Sending heartbeat to Server
-ADVANCED_DIALOG_DESCRIPTION=Select heartbeat sending interval:
+CONFIGURATION_DIALOG_DESCRIPTION=Select heartbeat sending interval:
 
 LOG_INFO_SENDING_PERMISSION_APPROVED=Sending {0} approved by the user.
 LOG_INFO_SENDING_PERMISSION_DISAPPROVED=Sending {0} disapproved by the user.
 LOG_INFO_SENDING_PERMISSION_UNKNOWN=Sending {0} not yet approved or disapproved by the user.
+
+HEARTBEAT_INTERVAL_ONCE=On start\u2010up
+HEARTBEAT_INTERVAL_HOURLY=Hourly
+HEARTBEAT_INTERVAL_DAILY=Daily
