--- a/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/src/org/eclipse/recommenders/internal/privacy/rcp/l10n/messages.properties
@@ -2,7 +2,7 @@ JOB_APPROVAL_DIALOG=Showing Approval Dialog
 
 PRIVACY_PREFPAGE_TITLE=Privacy
 PRIVACY_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins want to send selected information to interested parties. \
- You can configure which information may be sent below.
+ You can select which information may be sent below and, where supported, further configure what and when information will be sent.
 
 ANONYMOUS_ID_PREFPAGE_TITLE=Anonymous ID
 ANONYMOUS_ID_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins may want to send an anonymous ID to interested parties. \
@@ -12,7 +12,7 @@ ANONYMOUS_ID_PREFPAGE_DESCRIPTION=Some installed plug\u2010ins may want to send 
 
 APPROVAL_DIALOG_TITLE=New Plug\u2010ins Detected
 APPROVAL_DIALOG_MESSAGE=You have installed new plug\u2010ins that want to send selected information to interested parties. \
- You can configure which information may be sent below.
+ You can select which information may be sent below and, where supported, further configure what and when information will be sent.
 
 APPROVAL_WIZARD_TITLE=Configure Your Privacy Settings
 
@@ -24,6 +24,8 @@ WIZARD_INTRO_PAGE_CONTENT=Welcome to the Eclipse Privacy framework. \
 
 LOG_ERROR_ANONYMOUS_ID_FILE_READ=Failed to read anonymous ID from file {0}
 LOG_ERROR_ANONYMOUS_ID_FILE_WRITE=Failed to write anonymous ID to file {0}
+LOG_ERROR_LOADING_PREFERENCES=Failed to load preferences
+LOG_ERROR_SAVING_PREFERENCES=Failed to flush preferences
 
 WIZARD_INTRO_PAGE_PREFS_LINK_DESCRIPTION=You can configure which information you want to share on the next page or in <a href="{0}">\u2018{0}\u2019</a>.
 
@@ -41,7 +43,7 @@ LABEL_ANONYMOUS_ID=Anonymous ID:
 
 BUTTON_ENABLE_ALL=Enable All
 BUTTON_DISABLE_ALL=Disable All
-BUTTON_ADVANCED=Advanced...
+BUTTON_CONFIGURATION=Configure...
 BUTTON_GENERATE=Generate
 BUTTON_OK=OK
 BUTTON_NOT_NOW=Not Now
