[api] Add Privacy predefined datum ids to the API.
Change-Id: Id9b727f6a9337704a986ba5bcaa1f9b2498820b4
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/OSGI-INF/l10n/bundle.properties
@@ -22,3 +22,5 @@ datums.inet6ddress.description=An IPv6 address assigned to this host. \
 datums.anonymousId.name=Anonymous ID
 datums.anonymousId.description=A randomly generated identifier assigned to your login. \
  A new ID can be generated upon your request at any time.
+datums.email.name=E\u2010mail Address
+datums.email.description=Your e\u2010mail address. You can change the address that will be sent at any time.
